# llm_search_proxy

./: .env.example  README.md  build.sh  main.py  pyproject.toml  requirements.txt  uv.poetry.txt  uv.polyglot.txt
app/conf/: settings.yaml
app/routers/: __init__.py  openai.py  root.py
app/services/openai/: __init__.py
app/services/openai/chat/: completions.py
doc/: errors.md  openaiandstream.md
notebooks/: ployglot-usage.ipynb
tests/: test_polyglot.py
